<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_border"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".presentation.RatingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/product_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:fontFamily="serif"
            android:maxLines="2"
            android:text="@string/rating_header"
            android:textColor="@color/colorOffBlack"
            android:textSize="40sp" />

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:indeterminateTint="@color/colorGolden"
            android:progressTint="@color/colorGolden"
            android:secondaryProgressTint="@color/colorGolden"
            android:stepSize="1" />

        <TextView
            android:id="@+id/bid_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-thin"
            android:maxLines="2"
            android:text="@string/review_header"
            android:textColor="@color/colorOffBlack"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/user_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_text_border_round_corners"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/review_description"
            android:inputType="textMultiLine"
            android:lines="6"
            android:padding="10dp"
            android:textSize="25sp" />
    </LinearLayout>

    <Button
        android:id="@+id/submit_rating"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-thin"
        android:text="@string/rating_submit"
        android:textAllCaps="false"
        android:onClick="buttonSubmitRating"
        android:textColor="@color/colorWhite"
        android:textSize="36sp" />
</LinearLayout>