...
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:collapseIcon="@android:drawable/alert_dark_frame"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ECCBCB"
            android:visibility="visible">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_auction" />
</androidx.drawerlayout.widget.DrawerLayout>
