...
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/collectibles_filter"
                    android:title="@string/collectibles_category" />
                <item
                    android:id="@+id/jewellery_filter"
                    android:title="@string/jewellery_category" />
                <item
                    android:id="@+id/electronics_filter"
                    android:title="@string/electronics_category" />
            </group>
        </menu>
    </item>

    <item android:title="@string/my_auctions">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/won_auction"
                    android:title="Won Auctions"/>
            </group>
        </menu>
    </item>

</menu>
